--- a/Website.Pinger/Properties/launchSettings.json
+++ b/Website.Pinger/Properties/launchSettings.json
@@ -6,8 +6,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "PINGER_INTERVAL_IN_MINUTES": "0",
-        "PINGER_URLS_CSV": "https://www.google.com,http://localhost:4200/ping"
+        "PINGER_INTERVAL_IN_MINUTES": "1",
+        "PINGER_URLS_CSV": "https://www.google.com"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7007;http://localhost:5229"
