--- a/Website.Pinger/appsettings.json
+++ b/Website.Pinger/appsettings.json
@@ -2,7 +2,19 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      },
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
+      }
     }
   },
   "AllowedHosts": "*"
